# openGL_Study

GL/: .gitignore
GL/GLSL/: CMakeLists.txt
GL/GLSL/IMGUI/: CMakeLists.txt  Dependency.cmake  imgui.ini
GL/GLSL/IMGUI/shader/: per_vertex_color.vs
GL/GLSL/IMGUI/src/: buffer.h  context.cpp  context.h  main.cpp  program.cpp  program.h  texture.cpp
GL/GLSL/beforeTransfomation/: CMakeLists.txt  Dependency.cmake
GL/GLSL/beforeTransfomation/shader/: texture.fs
GL/GLSL/beforeTransfomation/src/: context.cpp  context.h  image.h  program.cpp  shader.cpp  shader.h  vertex_layout.cpp
GL/GLSL/src/: common.h  context.cpp  context.h  image.cpp  main.cpp  texture.cpp
GL/GLSL/transformation/: CMakeLists.txt  Dependency.cmake
GL/GLSL/transformation/src/: buffer.h  common.h  context.cpp  image.cpp  vertex_layout.h
GL/cmake_project/: CMakeLists.txt
GL/cmake_project/src/: main.cpp
GL/fst_example/: Dependency.cmake
GL/fst_example/src/: main.cpp
GL/pipeline/: CMakeLists.txt  Dependency.cmake
GL/pipeline/shader/: simple.fs  simple.vs
GL/pipeline/src/: common.cpp  common.h  context.cpp  context.h  main.cpp  program.cpp  program.h  shader.cpp
